# tape

./: .gitignore  2  Cargo.toml  Makefile  README.md  docker-compose.yaml  lol.rs  prometheus-config.yaml  tape.example.toml
blocks/: Cargo.toml
blocks/src/: block.rs  event.rs  helpers.rs  instruction.rs  lib.rs  merge.rs
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  keypair.rs  log.rs  main.rs
cli/src/commands/: account.rs  admin.rs  claim.rs  config.rs  db.rs  exchange.rs  info.rs  keys.rs  metrics.rs  mod.rs  network.rs  node.rs  read.rs  snapshot.rs  stake.rs  storage.rs  tape.rs  testnet.rs  track.rs  write.rs
cli/src/config/: cluster.rs  file.rs  mod.rs
cli/src/output/: mod.rs
cli/src/utils/: fs.rs  mod.rs
client/dep-test/: Cargo.toml
client/dep-test/src/: lib.rs
client/rpc-test/: Cargo.toml
client/rpc-test/src/: lib.rs
client/rpc-test/tests/: integration.rs
client/tape-client/: Cargo.toml
client/tape-client/src/: accounts.rs  client.rs  lib.rs  transactions.rs
client/tape-client/tests/: integration.rs
client/tape-rpc/: Cargo.toml
client/tape-rpc/src/: client.rs  error.rs  failover.rs  lib.rs  metrics.rs  retry.rs  rpc.rs
core/: Cargo.toml  output.txt
core/src/: apportion.rs  apportion_og.rs  bft.rs  bls.rs  coin.rs  encoding.rs  erasure.rs  hash.rs  lib.rs  macros.rs  map.rs  network.rs  ring.rs  types.rs
core/src/apportion/: assignment.rs  dhondt.rs  mod.rs  priority.rs  seat.rs
core/src/cert/: authority.rs  bls.rs  edwards.rs  mod.rs  snapshot.rs  track.rs
core/src/seat/: assignment.rs  dhondt.rs  mod.rs  priority.rs  sim.rs
core/src/shard/: assignment.rs  dhondt.rs  fixed.rs  mod.rs  priority.rs  sim.rs
core/src/snapshot/: mod.rs
core/src/spooler/: assignment.rs  dhondt.rs  group.rs  migrate.rs  mod.rs  priority.rs  sainte_lague.rs  spool.rs
core/src/staking/: allocation.rs  assignment.rs  dhondt.rs  history.rs  mod.rs  pool.rs  priority.rs  quotient.rs  rewards.rs  schedule.rs  set.rs  sim.rs  sim2.rs  state.rs  value.rs
core/src/storage/: accounting.rs  mod.rs  resource.rs
core/src/system/: accounting.rs  archive.rs  blacklist.rs  blob.rs  committee.rs  epoch.rs  exchange.rs  mod.rs  node.rs  operator.rs  pool.rs  reward.rs  rewards.rs  schedule.rs  sim.rs  staking.rs  storage.rs  utils.rs  value.rs
core/src/tape/: blob.rs  merge.rs  mod.rs  stream.rs  track.rs
core/src/tree/: canopy.rs  tree.rs  utils.rs
core/src/types/: bitmap.rs  coin.rs  heap.rs  map.rs  mod.rs  network.rs  number.rs  numeric.rs  ring.rs
crypto/: Cargo.toml
crypto/src/: hash.rs  lib.rs
crypto/src/ed25519/: consts.rs  errors.rs  mod.rs  types.rs  utils.rs
crypto/src/merkle/: canopy.rs  leaf.rs  mod.rs  tree.rs  utils.rs
crypto/src/merkle2/: tree.rs
e2e/: Cargo.toml
e2e/devnet/: Cargo.toml
e2e/devnet/src/: app.rs  log_layer.rs  main.rs  poller.rs  simnet.rs  sparkline.rs  stake_fuzzer.rs  tui.rs  verify.rs
e2e/fuzznet/: Cargo.toml
e2e/fuzznet/src/: app.rs  log_histogram.rs  log_layer.rs  main.rs  poller.rs  runner.rs  simnet.rs  stake_fuzzer.rs  stats.rs  tui.rs  verify.rs
e2e/localnet/: Cargo.toml
e2e/localnet/src/: api.rs  chain.rs  config.rs  observer.rs  orchestrator.rs  poller.rs  process.rs  tui.rs  upload.rs  view.rs
e2e/prodnet/: Cargo.toml
e2e/prodnet/src/: api.rs  chain.rs  config.rs  lib.rs  observer.rs  orchestrator.rs  poller.rs  process.rs  tui.rs  upload.rs  view.rs
e2e/simnet/: Cargo.toml
e2e/simnet/src/: chain.rs  config.rs  gateway.rs  lib.rs  log.rs  node.rs  scenario.rs  simnet.rs  tls.rs
e2e/simnet/tests/: active_set_growth.rs  basic_flow.rs  blacklist_rewards.rs  blob_upload.rs  bootstrap_late_join.rs  committee_increase.rs  eviction.rs  full_runtime_20.rs  full_runtime_20_bootstrap.rs  full_runtime_bft_epoch3.rs  full_runtime_bft_epoch5.rs  gateway_read.rs  group_count_preference.rs  group_increase.rs  late_join.rs  multi_epoch.rs  node_churn.rs  node_drop.rs  object_layer.rs  phase1_advance.rs  route_auth.rs  s3_admission.rs  s3_gateway.rs  short_tape_rewards.rs  smoke.rs  spool_recovery.rs  staking.rs  staking_rewards.rs  tokenomics.rs  upload_flow.rs
e2e/src/: chain.rs  cli.rs  consts.rs  context.rs  fixtures.rs  fsm.rs  lib.rs  log.rs  node.rs  rpc.rs  tests.rs  validator.rs  wait.rs
e2e/src/fixture/: chain_ops.rs  client.rs  cluster.rs  diagnostics.rs  epoch.rs  err.rs  mod.rs  network.rs  runtime.rs  server.rs  state.rs
e2e/testnet/: Cargo.toml
e2e/testnet/src/: api.rs  chain.rs  config.rs  lib.rs  observer.rs  orchestrator.rs  poller.rs  process.rs  tui.rs  upload.rs  view.rs
e2e/tests/: adversarial_permissionless.rs  basic_flow.rs  blocked_epoch.rs  bootstrap.rs  catchup.rs  catchup_flow.rs  epoch_transitions.rs  quorum_lifecycle.rs  quorum_transitions.rs  simple_setup.rs  staking_rewards.rs  storage_load.rs  storage_scale.rs
lib/blocks/: Cargo.toml
lib/blocks/src/: block.rs  capture.rs  error.rs  event.rs  helpers.rs  instruction.rs  lib.rs  merge.rs
lib/core/: Cargo.toml
lib/core/src/: bls.rs  lib.rs  (+5 more)
lib/metrics/: Cargo.toml
lib/snapshot/: Cargo.toml
lib/spooler/: Cargo.toml
metrics/: Cargo.toml
metrics/src/: http.rs  lib.rs  registry.rs  timer.rs
network/api/: Cargo.toml
network/cli/: Cargo.toml
network/client/: Cargo.toml
network/gateway/: Cargo.toml
node/: Cargo.toml
node/src/: fsm.rs  http.rs  ingestor.rs  lib.rs  pipeline.rs  reconciler.rs  supervisor.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: certification.rs  client.rs  decoder.rs  discovery.rs  downloader.rs  encoder.rs  error.rs  gateway.rs  helpers.rs  lib.rs  metrics.rs  network.rs  object.rs  routing.rs  stake_key.rs  staking.rs  tape_key.rs  tapedrive.rs  tests.rs  uploader.rs
sdk/tests/: e2e_upload_download.rs  sdk.rs
slicer/: Cargo.toml
slicer/benches/: slicer.rs
slicer/src/: api.rs  basic.rs  clay.rs  codec.rs  consts.rs  errors.rs  lib.rs  merkle_helpers.rs  metadata.rs  reed_solomon.rs  repair.rs  rotated.rs  slice_index.rs  slicer.rs  striped.rs  types.rs
test/: Cargo.toml
test/harness/: Cargo.toml
test/src/: lib.rs
(+1800 files in other folders)
