[workspace]
resolver = "2"
members = [
  "api",
  "core",
  "crypto",
  "solana",
  "test",
  "metrics",
  "programs/exchange",
  "programs/staking",
  "programs/tapedrive",
  "programs/token",
  "network/slicer",
  "network/node",
  "network/api",
  "network/client",
  "sdk",
  "cli",
  "store/store",
  "store/store-memory",
  "store/store-rocks",
  "store/tape-store",
  "rpc/rpc",
  "rpc/rpc-solana",
  "rpc/rpc-client",
  "rpc/rpc-test",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://tapedrive.io"
description = "A decentralized blob store using Solana."
repository = "https://github.com/tapedrive-io/tape"
readme = "./README.md"
keywords = ["solana", "crypto", "storage"]

[workspace.dependencies]
tape-api = { version = "0.3.0", path = "./api" }
tape-core = { version = "0.3.0", path = "./core" }
tape-crypto = { version = "0.3.0", path = "./crypto" }
tape-solana = { version = "0.3.0", path = "./solana" }
tape-test = { version = "0.3.0", path = "./test" }

rpc = { version = "0.3.0", path = "./rpc/rpc" }
rpc-solana = { version = "0.3.0", path = "./rpc/rpc-solana" }
rpc-client = { version = "0.3.0", path = "./rpc/rpc-client" }
rpc-test = { version = "0.3.0", path = "./rpc/rpc-test" }
tape-metrics = { version = "0.3.0", path = "./metrics" }

tape-store = { version = "0.3.0", path = "./store/tape-store" }
tape-node = { version = "0.3.0", path = "./network/node" }
tape-node-api = { version = "0.3.0", path = "./network/api" }
tape-node-client = { version = "0.3.0", path = "./network/client" }
tape-slicer = { version = "0.3.0", path = "./network/slicer" }
store = { version = "0.3.0", path = "./store/store" }
store-memory = { version = "0.3.0", path = "./store/store-memory" }
store-rocks = { version = "0.3.0", path = "./store/store-rocks" }
tape-sdk = { version = "0.3.0", path = "./sdk" }

# tape-archive = { version = "0.3.0", path = "./tape-archive" }
# tape-cli = { version = "0.3.0", path = "./tape-cli" }
# tape-network = { version = "0.3.0", path = "./tape-node" }
# tape-program = { version = "0.3.0", path = "./tape-program" }
# tape-solana = { version = "0.3.0", path = "./tape-solana" }
# tape-utils = { version = "0.3.0", path = "./tape-utils" }

# program dependencies
bytemuck = "1.14.3"
bytemuck_derive = "1.9.3"
num_enum = "0.7.2"
array-const-fn-init = "0.1.1"
const-crypto = "0.3.0"

# solana-specific (2.3.x works with Rust 1.92 and rocksdb 0.23.0)
solana-client = "=2.3"
solana-program = "=2.3"
solana-pubkey = "=2.3"
solana-keypair = "=3.1"
solana-sdk = "=2.3"
solana-transaction-status = "=2.3"
solana-account-decoder = "=2.3"
solana-transaction-status-client-types = "=2.3"
solana-curve25519 = "=2.3"
solana-test-validator = "=2.3"

mpl-token-metadata = "5.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^7", features = [ "no-entrypoint" ] } 

# client-specific
sha2 = "0.10.8"
anyhow = "1.0"
flate2 = "1.0"
blake3 = "1.8.2"
bincode = "1.3"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "2.0.12"
five8 = "1.0.0"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }

# async
async-trait = "0.1"

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["default", "json",] }
indicatif = "0.17"
console = "0.15"
mime = "0.3"
mime_guess = "2.0"
log = "0.4"
env_logger = "0.11"

# storage-specific
wincode = "0.1"
wincode-derive = "0.1"

# network-specific
futures = "0.3"
rocksdb = {version = "0.23.0", features = ["multi-threaded-cf"]}
tempdir = "0.3"
axum = "0.8.4"
num_cpus = "1.17.0"
tar = "0.4.44"
prometheus = { version = "0.14.0", features = ["push"] }
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.5.0"
http-body-util = "0.1.3"
once_cell = "1.19"

[patch.crates-io]

[profile.release]
overflow-checks = true
