[workspace]
resolver = "2"
members = [
  "api",
  "core",
  "crypto",
  "solana",
  "blocks",
  "programs/exchange",
  "programs/staking",
  "programs/tapedrive",
  "programs/token",
  "slicer",
  "spooler",
  "sdk",
  "store/store",
  "store/store-memory",
  "store/store-rocks",
  "store/tape-store",
  "rpc/rpc",
  "rpc/rpc-solana",
  "rpc/rpc-client",
  "rpc/rpc-litesvm",
  "metrics",
  "network/api",
  "network/client",
  "network/node",
  "peer/peer",
  "peer/peer-memory",
  "peer/peer-http",
  "e2e/simnet",
  "e2e/fuzznet",
]
# Programs and test crates excluded from default cargo build/check:
# - programs/*: require cargo build-sbf
# - test: program testing, requires solana feature
# - e2e: validator-backed end-to-end tests (disabled by default)
# - sdk, rpc/*: not yet created
default-members = [
  "api",
  "core",
  "crypto",
  "solana",
  "blocks",
  "slicer",
  "spooler",
  "store/store",
  "store/store-memory",
  "store/store-rocks",
  "store/tape-store",
  "metrics",
  "network/api",
  "network/client",
  "network/node",
  "peer/peer",
  "peer/peer-memory",
  "peer/peer-http",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://tapedrive.io"
description = "A decentralized blob store using Solana."
repository = "https://github.com/tapedrive-io/tape"
readme = "./README.md"
keywords = ["solana", "crypto", "storage"]

[workspace.dependencies]
tape-api = { version = "0.3.0", path = "./api" }
tape-blocks = { version = "0.3.0", path = "./blocks" }
tape-core = { version = "0.3.0", path = "./core" }
tape-crypto = { version = "0.3.0", path = "./crypto" }
tape-solana = { version = "0.3.0", path = "./solana" }

rpc = { version = "0.3.0", path = "./rpc/rpc" }
rpc-solana = { version = "0.3.0", path = "./rpc/rpc-solana" }
rpc-client = { version = "0.3.0", path = "./rpc/rpc-client" }
rpc-litesvm = { version = "0.1.0", path = "./rpc/rpc-litesvm" }

tape-store = { version = "0.3.0", path = "./store/tape-store" }
tape-slicer = { version = "0.3.0", path = "./slicer" }
tape-spooler = { version = "0.3.0", path = "./spooler" }
store = { version = "0.3.0", path = "./store/store" }
store-memory = { version = "0.3.0", path = "./store/store-memory" }
store-rocks = { version = "0.3.0", path = "./store/store-rocks" }
tape-sdk = { version = "0.3.0", path = "./sdk" }
tape-test = { version = "0.3.0", path = "./test" }
tape-metrics = { version = "0.3.0", path = "./metrics" }
tape-node-api = { version = "0.3.0", path = "./network/api" }
tape-node-client = { version = "0.3.0", path = "./network/client" }
tape-node = { version = "0.3.0", path = "./network/node" }
peer = { version = "0.3.0", path = "./peer/peer" }
peer-memory = { version = "0.3.0", path = "./peer/peer-memory" }
peer-http = { version = "0.3.0", path = "./peer/peer-http" }
ratatui = "0.29"
crossterm = "0.28"

# program dependencies
bytemuck = "1.14.3"
bytemuck_derive = "1.9.3"
num_enum = "0.7.2"
array-const-fn-init = "0.1.1"
const-crypto = "0.3.0"

# solana-specific (2.3.x works with Rust 1.92 and rocksdb 0.23.0)
solana-client = "=2.3"
solana-program = "=2.3"
solana-pubkey = "=2.3"
solana-keypair = "=3.1"
solana-sdk = "=2.3"
solana-transaction-status = "=2.3"
solana-account-decoder = "=2.3"
solana-transaction-status-client-types = "=2.3"
solana-curve25519 = "=2.3"

mpl-token-metadata = "5.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^7", features = [ "no-entrypoint" ] } 

# client-specific
sha2 = "0.10.8"
anyhow = "1.0"
flate2 = "1.0"
blake3 = "1.8.2"
bincode = "1.3"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "2.0.12"
five8 = "1.0.0"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }

# async
async-trait = "0.1"
arc-swap = "1"

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
indicatif = "0.17"
console = "0.15"
mime = "0.3"
mime_guess = "2.0"
log = "0.4"
env_logger = "0.11"

# storage-specific
wincode = "0.1"
wincode-derive = "0.1"

# network-specific
futures = "0.3"
rocksdb = {version = "0.23.0", features = ["multi-threaded-cf"]}
tempdir = "0.3"
axum = "0.8.4"
num_cpus = "1.17.0"
tar = "0.4.44"
prometheus = { version = "0.14.0", features = ["push"] }
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.5.0"
http-body-util = "0.1.3"
once_cell = "1.19"

[patch.crates-io]

[profile.release]
overflow-checks = true
