[workspace]
resolver = "2"
members = [
  "solana/api",
  "lib/core",
  "lib/crypto",
  "solana/framework",
  "lib/blocks",
  "test/harness",
  "solana/programs/exchange",
  "solana/programs/staking",
  "solana/programs/tapedrive",
  "solana/programs/token",
  "lib/slicer",
  "lib/spooler",
  "lib/snapshot",
  "sdk",
  "store/store",
  "store/store-memory",
  "store/store-rocks",
  "store/tape-store",
  "solana/rpc",
  "solana/rpc-solana",
  "solana/rpc-client",
  "solana/rpc-litesvm",
  "solana/rpc-cache",
  "lib/metrics",
  "network/gateway",
  "network/node",
  "network/peer-manager",
  "network/peer-memory",
  "network/peer-http",
  "network/peer-tls",
  "network/protocol",
  "lib/retry",
  "e2e/simnet",
  "e2e/devnet",
  "e2e/testnet",
  # "tools/tape-admin",
  # "tools/tape-grind",
  # "tools/tape-loadgen",
  # "tools/tape-network",
  # "tools/tape",
  # "tools/tape-cli-common",
]

# Programs and test crates excluded from default cargo build/check:
# - programs/*: require cargo build-sbf
# - test: program testing, requires solana feature
# - e2e: validator-backed end-to-end tests (disabled by default)
# - sdk, rpc/*: not yet created
default-members = [
  "solana/api",
  "lib/core",
  "lib/crypto",
  "solana/framework",
  "lib/blocks",
  "lib/slicer",
  "lib/spooler",
  "lib/snapshot",
  "store/store",
  "store/store-memory",
  "store/store-rocks",
  "store/tape-store",
  "lib/metrics",
  "network/gateway",
  "network/node",
  "network/peer-manager",
  "network/peer-memory",
  "network/peer-http",
  "network/peer-tls",
  "network/protocol",
  "lib/retry",
  # "tools/tape-admin",
  # "tools/tape-grind",
  # "tools/tape-loadgen",
  # "tools/tape-network",
  # "tools/tape",
  # "tools/tape-cli-common",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://tapedrive.io"
description = "A decentralized blob store using Solana."
repository = "https://github.com/tapedrive-io/tape"
readme = "./README.md"
keywords = ["solana", "crypto", "storage"]

[workspace.dependencies]
tape-api = { version = "0.3.0", path = "./solana/api" }
tape-blocks = { version = "0.3.0", path = "./lib/blocks" }
tape-core = { version = "0.3.0", path = "./lib/core" }
tape-crypto = { version = "0.3.0", path = "./lib/crypto" }
tape-solana = { version = "0.3.0", path = "./solana/framework" }

rpc = { version = "0.3.0", path = "./solana/rpc" }
rpc-solana = { version = "0.3.0", path = "./solana/rpc-solana" }
rpc-client = { version = "0.3.0", path = "./solana/rpc-client" }
rpc-litesvm = { version = "0.1.0", path = "./solana/rpc-litesvm" }

tape-store = { version = "0.3.0", path = "./store/tape-store" }
tape-slicer = { version = "0.3.0", path = "./lib/slicer" }
tape-spooler = { version = "0.3.0", path = "./lib/spooler" }
tape-snapshot = { version = "0.3.0", path = "./lib/snapshot" }
store = { version = "0.3.0", path = "./store/store" }
store-memory = { version = "0.3.0", path = "./store/store-memory" }
store-rocks = { version = "0.3.0", path = "./store/store-rocks" }
tape-sdk = { version = "0.3.0", path = "./sdk" }
tape-test = { version = "0.3.0", path = "./test" }
tape-chain-harness = { version = "0.3.0", path = "./test/harness" }
tape-metrics = { version = "0.3.0", path = "./lib/metrics" }
tape-gateway = { version = "0.3.0", path = "./network/gateway" }
tape-node = { version = "0.3.0", path = "./network/node" }
peer-manager = { version = "0.3.0", path = "./network/peer-manager" }
peer-memory = { version = "0.3.0", path = "./network/peer-memory" }
peer-http = { version = "0.3.0", path = "./network/peer-http" }
peer-tls = { version = "0.3.0", path = "./network/peer-tls" }
tape-protocol = { version = "0.3.0", path = "./network/protocol" }
tape-retry = { version = "0.3.0", path = "./lib/retry" }
dashmap = "6"
ratatui = "0.29"
crossterm = "0.28"

# program dependencies
bytemuck = "1.14.3"
bytemuck_derive = "1.9.3"
num_enum = "0.7.2"
array-const-fn-init = "0.1.1"
const-crypto = "0.3.0"

# solana-specific
solana-client = "=4.0.0"
solana-program = "=4.0.0"
solana-pubkey = { version = "=4.1.0", features = ["curve25519", "rand"] }
solana-keypair = "=3.1.0"
solana-signer = "=3.0.0"
solana-signature = "=3.3.0"
solana-hash = { version = "=4.2.0", features = ["atomic", "decode"] }
solana-account = "=3.4.0"
solana-clock = "=3.0.1"
solana-commitment-config = "=3.1.1"
solana-instruction = "=3.2.0"
solana-instruction-error = "=2.2.0"
solana-compute-budget-interface = "=3.0.0"
solana-system-interface = { version = "=3.0.0", features = ["bincode"] }
solana-program-option = "=3.1.0"
solana-program-pack = "=3.1.0"
solana-program-error = "=3.0.0"
solana-rent = "=4.2.1"
solana-sysvar-id = "=3.0.0"
solana-message = { version = "=3.1.0", features = ["serde"] }
solana-transaction = { version = "=3.1.0", features = ["bincode", "serde"] }
solana-transaction-context = { version = "=4.0.0", features = ["serde"] }
solana-transaction-error = { version = "=3.1.0", features = ["serde"] }
solana-transaction-status = { version = "=4.0.0", features = ["agave-unstable-api"] }
solana-account-decoder = "=4.0.0"
solana-transaction-status-client-types = { version = "=4.0.0", features = ["agave-unstable-api"] }
solana-curve25519 = "=2.3"
solana-sha256-hasher = { version = "=3.1.0", features = ["sha2"] }

spl-token = { version = "=9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=8.0.0", features = [ "no-entrypoint" ] }
spl-token-interface = "=3.0.0"
spl-associated-token-account-interface = { version = "=2.0.0", features = ["borsh"] }

# client-specific
sha2 = "0.10.8"
anyhow = "1.0"
flate2 = "1.0"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }
bincode = "1.3"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "2.0.12"
five8 = "1.0.0"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }

# async
async-trait = "0.1"
arc-swap = "1"

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
indicatif = "0.17"
console = "0.15"
mime = "0.3"
mime_guess = "2.0"
log = "0.4"
env_logger = "0.11"

# storage-specific
wincode = "0.1"
wincode-derive = "0.1"

# network-specific
futures = "0.3"
rocksdb = {version = "0.23.0", features = ["multi-threaded-cf"]}
tempdir = "0.3"
axum = "0.8.4"
num_cpus = "1.17.0"
tar = "0.4.44"
prometheus = { version = "0.14.0", features = ["push"] }
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.5.0"
http-body-util = "0.1.3"
once_cell = "1.19"

[patch.crates-io]

[profile.release]
overflow-checks = true

# Release optimizations + full DWARF debug info in a `.dSYM` bundle, for
# attaching a debugger (tapedbg, samply, lldb). Separate `target/debug-release/`
# so it doesn't invalidate normal release builds. See `make run-devnet-debug`.
[profile.debug-release]
inherits = "release"
debug = "full"
split-debuginfo = "packed"
strip = "none"
