[package]
name = "tape-crypto"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-crypto"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
std = []
solana = []

[dependencies]
dashu = "0.4.2"
solana-nostd-sha256 = "0.1.3"
solana-bn254 = "2.1.0"
num = "0.4.3"
ark-bn254 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5.0", optional = true  }
ark-ff = { version = "0.5.0", optional = true  }
ark-serialize = { version = "0.5.0", optional = true  }
rand = { version = "0.8.5", optional = true }
blake3 = { workspace = true, optional = true }
bytemuck.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.8.5", default-features = true }
blake3 = { workspace = true }
