[package]
name = "tape-crypto"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-crypto"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
std = []
solana = []

[dependencies]
dashu = "0.4.2"
solana-nostd-sha256 = "0.1.3"
solana-bn254 = "2.1.0"
num = "0.4.3"
hex-literal = "0.4.1"
hex = "0.4"
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["zeroize"] }
ark-bn254 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5.0", optional = true  }
ark-ff = { version = "0.5.0", optional = true  }
ark-serialize = { version = "0.5.0", optional = true  }
rand = { version = "0.8.5", optional = true }
sha2 = { workspace = true }
solana-program = { workspace = true }
solana-curve25519 = { workspace = true } 
bytemuck.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.8.5", default-features = true }
