[package]
name = "tape-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "End-to-end testing framework for Tapedrive"

[dependencies]
# Workspace deps
tape-api = { workspace = true }
tape-core = { workspace = true }
tape-crypto = { workspace = true }
rpc-client = { workspace = true }
rpc-solana = { workspace = true }
bytemuck = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tempfile = "3.10"
reqwest = { workspace = true }
dirs = { workspace = true }
libc = "0.2"
tracing = "0.1"

# Solana types (for Pubkey, etc.)
solana-sdk = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serial_test = "3"
