[package]
name = "tape-sdk"
description = "High-level SDK for tapedrive blob upload/download operations"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
metrics = ["tape-metrics/metrics"]

[dependencies]
# Internal crates
tape-api = { path = "../solana/api" }
tape-core = { workspace = true }
tape-crypto = { workspace = true, features = ["wincode"] }
tape-slicer = { workspace = true }
tape-metrics = { workspace = true, optional = true }
tape-protocol = { workspace = true }
peer-manager = { workspace = true }
tape-retry = { workspace = true }
peer-http = { path = "../network/peer-http" }
rpc.workspace = true
rpc-solana.workspace = true
rpc-client = { path = "../solana/rpc-client" }

# Logging
tracing = "0.1"

# Solana (for keypair helpers)
solana-sdk = { workspace = true }

# Serialization (for keypair loading)
serde_json = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }

# Concurrency
arc-swap.workspace = true

# Error handling
thiserror = { workspace = true }

# Random
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tape-store = { path = "../store/tape-store" }
tape-metrics = { workspace = true }
store-memory = { path = "../store/store-memory" }
rpc-litesvm = { path = "../solana/rpc-litesvm" }
peer-memory = { path = "../network/peer-memory" }
axum = { workspace = true }
serial_test = "3.1"
bytemuck = { workspace = true }
