[package]
name = "tape-slicer"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-core"

[dependencies]
tape-core.workspace = true
tape-crypto.workspace = true
bytemuck.workspace = true
num_enum.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wincode = { version = "0.2", features = ["derive"] }
reed-solomon-simd = "3"
clay-codes = "0.1"
thiserror = "1.0"

[dev-dependencies]
solana-keypair.workspace = true
rand = "0.8"

[features]
default = []
std = []
solana = []
