[package]
name = "tape-test"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-test"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
solana = []
airdrop = []

[dependencies]
tape-core = { workspace = true, features = ["solana"] }
tape-api = { workspace = true, features = ["solana"] }

mollusk-svm = "0.0.15"
mollusk-svm-programs-token = "0.0.15"
pretty-hex = "0.4.1"
solana-log-collector = "=2.3"

bincode.workspace = true
mpl-token-metadata.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
