[package]
name = "tape-test"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-test"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
solana = []
airdrop = []

[dependencies]
tape-core = { workspace = true, features = ["solana"] }
tape-api = { workspace = true, features = ["solana"] }

mollusk-svm = "0.13.4"
mollusk-svm-programs-token = "0.13.4"
pretty-hex = "0.4.1"
solana-svm-log-collector = { version = "=4.0.0", features = ["agave-unstable-api"] }

bincode.workspace = true
solana-account.workspace = true
solana-instruction.workspace = true
solana-program-option.workspace = true
solana-program-pack.workspace = true
solana-pubkey.workspace = true
solana-rent.workspace = true
solana-system-interface.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
