[package]
name = "dep-test"
version = "0.1.0"
edition = "2021"

[workspace]

# SUCCESS: solana 2.3.x works with Rust 1.92 and rocksdb 0.23.0
# Test 5: Verify all deps we need work together

[dependencies]
# Core solana deps (matching our main codebase needs)
solana-client = "=2.3"
solana-sdk = "=2.3"
solana-transaction-status = "=2.3"
solana-account-decoder = "=2.3"

# Test validator
solana-test-validator = "=2.3"

# rocksdb - now we can use our preferred version
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
