[package]
name = "rpc-test"
description = "Test RPC implementation using Solana TestValidator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# Core trait
tape-rpc.workspace = true

# Solana dependencies
solana-client.workspace = true
solana-sdk.workspace = true
solana-test-validator.workspace = true
solana-transaction-status.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
# Tape crates for integration tests
tape-client.workspace = true
tape-api.workspace = true
tape-core.workspace = true
bytemuck.workspace = true
