[package]
name = "tape-client"
description = "High-level client for tape network programs"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# RPC trait and production implementation
tape-rpc = { version = "0.3.0", path = "../tape-rpc" }
rpc-solana = { version = "0.3.0", path = "../rpc-solana" }

# Tape crates
tape-api.workspace = true
tape-core.workspace = true
tape-metrics = { workspace = true, optional = true }

# Solana dependencies
solana-sdk.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
bytemuck.workspace = true

# Logging (optional)
tracing = { version = "0.1", optional = true }

[features]
default = []
metrics = ["tape-metrics/metrics", "rpc-solana/metrics"]
