[package]
name = "tape-rpc"
description = "Solana RPC client with retry and failover for Tape"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# Solana dependencies
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging (optional)
tracing = { version = "0.1", optional = true }

# Random for jitter
rand.workspace = true

# Metrics (optional)
tape-metrics = { workspace = true, optional = true }

[features]
default = []
metrics = ["tape-metrics/metrics", "tracing"]
