[package]
name = "tape-rpc"
description = "Core RPC trait and error types for Solana RPC operations"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# Solana SDK for types used in the trait (Pubkey, Account, Transaction, etc.)
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-client.workspace = true

# Async trait support
async-trait.workspace = true

# Error handling
thiserror.workspace = true
