[package]
name = "tape-e2e-fuzznet"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fuzznet"
path = "src/main.rs"

[dependencies]
tape-e2e-simnet = { path = "../simnet" }
tape-core.workspace = true
tape-crypto.workspace = true
tape-store.workspace = true
tape-protocol.workspace = true
peer-memory.workspace = true
tape-api.workspace = true
tape-sdk.workspace = true
anyhow.workspace = true
tokio.workspace = true
rand.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-core = "0.1"
solana-sdk.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rpc-client.workspace = true
rpc-litesvm.workspace = true
tape-node.workspace = true
arc-swap = "1"
